# openarpg

./: .gitignore  CLAUDE.md  CMakeLists.txt  ITEMIZATION.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: build_linux.yml  build_macos.yml  build_webassembly.yml  build_windows.yml
src/: CMakeLists.txt  abilities.c  abilities.h  combat.c  combat.h  ecs.c  ecs.h  enemy.c  enemy.h  events.c  events.h  game.c  game.h  input.h  input_state.h  openarpg.c  player.c  player.h
src/platform/: input.c  input.h  openarpg.c  render.c  render.h
tests/: CMakeLists.txt  test_main.c
